ocaml (3.09.3~rc1-1) experimental; urgency=low

  [ Julien Cristau ]
  * New upstream release candidate.

  [ Stefano Zacchiroli ]
  * Updated policy (now at version 0.7.1); changes:
    - added a best-practice section about using the XS-X-Vcs-Svn field in
      debian/control of OCaml related packages
    - fixed typo in the suggested debian/rules line to fill the OFILES
      variable

  [ Samuel Mimram ]
  * Updated policy (section 2.3) to explain how to add a conditional
    dependency on ocaml-base-nox-VERSION for native/bytecode packages.

 -- Samuel Mimram <smimram@debian.org>  Sun, 10 Sep 2006 23:11:31 +0000

ocaml (3.09.2-6) unstable; urgency=low

  * Correct /usr/include/caml symbolic link, closes: #379271.
  * Correct symbolic links in documentation directories.
  * Updated policy.

 -- Samuel Mimram <smimram@debian.org>  Sun, 23 Jul 2006 14:37:36 +0000

ocaml (3.09.2-5) unstable; urgency=low

  * Added a missing dependency on docbook-xml, closes: #373996.

 -- Samuel Mimram <smimram@debian.org>  Fri, 16 Jun 2006 17:58:35 +0000

ocaml (3.09.2-4) unstable; urgency=low

  [ Julien Cristau ]
  * Update reference to upstream tarball location in debian/copyright.
  * Actually apply the patch to fix the stdlib manpages' section.

  [ Samuel Mimram ]
  * Integrate the ocaml policy in the package. Added a build dependency on
    docbook-utils to build it.
  * Put the symbolic links directly in the packages instead of using postinst.
  * Put forgotten ocamldep.opt in ocaml-native-compilers.
  * We don't need to remove rpaths anymore.

 -- Samuel Mimram <smimram@debian.org>  Fri, 16 Jun 2006 09:11:02 +0000

ocaml (3.09.2-3) unstable; urgency=low

  * Uploading to unstable.

 -- Samuel Mimram <smimram@debian.org>  Mon, 15 May 2006 20:40:39 +0000

ocaml (3.09.2-2) experimental; urgency=low

  [ Julien Cristau ]
  * Add a patch to put stdlib manpages in section 3o.
  * Fix typo in ocamldumpobj(1).
  * Add symlinks so that ocamldep.opt(1) and ocamllex.opt(1) exist.
