@@ -1,4 +1,4 @@
 Changes
 README
-debian/policy/ocaml_packaging_policy
+debian/policy/ocaml_packaging_policy.txt
 debian/policy/ocaml_packaging_policy.html
